# movbits-api

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  cloudfront-all.json  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
postman/environments/: MovBits - Local Dev.environment.yaml  MovBits - Remote.environment.yaml
src/: manage.py
src/administration/api/: serializers.py  urls.py  views.py
src/analytics/: tests.py
src/analytics/api/: serializers.py  urls.py  urls_temp.py  views.py
src/billing/: admin.py  models.py  tests.py
src/billing/api/: serializers.py  urls.py  (+1 more)
src/core/: admin.py  apps.py  context_processors.py  forms.py  mfa_adapter.py  middleware.py  models.py  signals.py  storage_backends.py  urls.py  utils.py  views.py
src/event_machine/: admin.py  apps.py  flush_logs.py  logging.py  models.py  redis_client.py  urls.py  views.py
src/events/: apps.py  emit.py  pubsub.py  schemas.py
src/feature/: models.py  tests.py
src/history/: models.py
src/localization/: admin.py  models.py
src/maintenance/: middleware.py
src/media/: admin.py  models.py
src/microdrama/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
src/movbitsapi/: asgi.py  urls.py  wsgi.py
src/shortlink/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/shows/: admin.py  mock_data.py  models.py  tests.py
src/site_invitations/: adapter.py  admin.py  apps.py  models.py  tests.py  utils.py
src/support/: admin.py  models.py
src/survey/: admin.py  models.py
src/team/: admin.py  forms.py  models.py  urls.py  views.py
src/wallet/: admin.py  apps.py  models.py
(+129 files in other folders)
